[metadata]
name = aioeximgur
version = 0.1.0
url = https://github.com/eXhumer/aioeXImgur
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE.md
description = Asynchronous Python interface to Imgur services
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = aioeximgur
install_requires =
    aiohttp ~= 3.7.4.post0

[options.extras_require]
speedups =
    aiohttp[speedups] ~= 3.7.4.post0
